Revision history for {{$dist->name}}

{{$NEXT}}
    [New features]
    - Ryu::Source->as_queue allows `max_items` and will pause the stream while waiting for the queue to drain

    [Bugs fixed]
    - extra single-use Futures were being created, which caused complaints from Future::XS since they were
    abandoned
    - chained nodes were still being called after completion, which would lead to some odd-looking debug messages
    from nodes such as `->take(5)`

3.003     2023-03-03 20:51:58+08:00 Asia/Singapore
    [New features]
    - Ryu::Observable now has a ->finish method

3.002     2021-07-07 17:48:25+08:00 Asia/Kuala_Lumpur
    [Bugs fixed]
    - in ->flat_map, any failure in the original or added Ryu::Source instances
    will now propagate as a failure for the ->flat_map source as well

3.001     2021-06-21 08:19:28+08:00 Asia/Kuala_Lumpur
    [New features]
    - Ryu::Observable has aliases for ->as_numeric, ->as_number and ->set_numeric, ->set_number
    - Sentinel support for Ryu::Observable via ->lvalue_str and ->lvalue_num

3.000     2021-05-01 19:58:23+08:00 Asia/Kuala_Lumpur
    [New features]
    - ->next support

    [Bugs fixed]
    - the ->completed and ->unblocked methods now return uncancellable Futures, so that
    they can be used with constructs such as Future->wait_any(timeout, $src->unblocked)
    without affecting internal state

2.009     2021-04-13 13:32:36+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - ->unblocked could fail due to bypassing the default when attempting to use the Future factory

2.008     2021-04-05 12:20:04+08:00 Asia/Kuala_Lumpur
    New features:

    - ->emit_from joins multiple sources into the current source

2.007     2021-01-25 02:01:08+08:00 Asia/Kuala_Lumpur
    New features:

    - the `->source` provided by a Ryu::Sink is now a child of the sink itself,
    to facilitate backpressure algorithms and help with common streaming configurations

    Bugs fixed:
