@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
     [New features]
     - Ryu::Source->as_queue allows `max_items` and will pause the stream while waiting for the queue to drain
+    - flag a warning when someone tries to use `->completed->done/fail` directly, since that's not likely to work as expected
 
     [Bugs fixed]
     - extra single-use Futures were being created, which caused complaints from Future::XS since they were
